--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,30 @@
 /obj
 /Library
-.DS_Store
-Assembly-CSharp-Editor.csproj
-Assembly-CSharp-firstpass.csproj
-Assembly-CSharp.csproj
 /Temp
+
+# ============ #
+# OS generated #
+# ============ #
+.DS_Store*
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+[Tt]humbs.db
+[Dd]esktop.ini
+
+# ============================================= #
+# Visual Studio / MonoDevelop / Rider generated #
+# ============================================= #
+[Ee]xported[Oo]bj/
+.vs/
+/*.userprefs
+/*.csproj
+/*.pidb
+/*.suo
+/*.sln*
+/*.user
+/*.unityproj
+/*.booproj
+/.idea*/
+*.stackdump
